--- a/assets/component-faqs.css
+++ b/assets/component-faqs.css
@@ -479,7 +479,8 @@ faqs-item{
     color: #ffffff;
 }
 
-body:has(.faqs-dark-mode) .wrapper-body {
+body:has(.faqs-dark-mode) .wrapper-body,
+body:has(.faqs-dark-mode) .body-content-wrapper {
     background-color: #1a1a1a;
 }
 
